# advent-of-code-2022

./: pyproject.toml
day1/: main.py  main2.py
day2/: main.py  main2.py
day3/: main.py  main2.py
day4/: main.py  main2.py
day5/: inputs1.txt  main.py  main2.py
day6/: main.py  main2.py
day7/: main.py  main2.py  tryAnyTree.py
day8/: main.py  main2.py  main_demo.py
